<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.com.smileplants.B11product"
    android:background="@drawable/shape03">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_gravity="center">

        <TextView
            android:text="@string/Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp" />

        <Button
            android:text="@string/pr_fruit"
            android:id="@+id/fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape02" />

        <Button
            android:text="@string/pr_leaf"
            android:id="@+id/leaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape02" />


        <Button
            android:text="@string/pr_flower"
            android:id="@+id/flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape02" />

        <Button
            android:text="@string/pr_root"
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape02" />

    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:src="@drawable/home"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:color/transparent" />

</RelativeLayout>
